erDiagram
    PUBLISHER ||--o{ BOOK : publishes
    PUBLISHER {
        INT publisher_id PK
        VARCHAR name
        VARCHAR contact_email
        VARCHAR phone
    }
    MEMBER ||--o{ BORROW_TRANSACTION : makes
    MEMBER {
        INT member_id PK
        VARCHAR first_name
        VARCHAR last_name
        VARCHAR email
        VARCHAR phone
        DATE join_date
    }
    BOOK ||--o{ BORROW_TRANSACTION : "is involved in"
    BOOK {
        INT book_id PK
        VARCHAR title
        VARCHAR author
        VARCHAR isbn
        INT published_year
        INT total_copies
        INT available_copies
        INT publisher_id FK
    }
    BORROW_TRANSACTION {
        INT transaction_id PK
        INT book_id FK
        INT member_id FK
        DATE borrow_date
        DATE due_date
        DATE return_date
        ENUM status
    }
